<resources>
    <string name="app_name">FlowerNotebook</string>
    ///////////мои строки///////////////
    /*кнопки таблиц*/
    <string name="btn_nomenclature">Номенклатура</string>
    <string name="btn_sales">Продажи</string>
    <string name="btn_clients">Клиенты</string>
    <string name="btn_providers">Поставщики</string>
    <string name="btn_employees">Сотрудники</string>
    <string name="title_activity_provider">ProviderActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    ///////////мои строки///////////////
</resources>